src/objects/Ficha_de_conocimiento__c.object
<CustomObject>
    <fields>
        <fullName>Empleados_en_Efectivo__c</fullName>
        <label>% Empleados en Efectivo</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
     <fields>
        <fullName>Empleados_en_Electronico__c</fullName>
        <label>% Empleados en Electrónico</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estatus_Ficha__c</fullName>
        <label>Estatus Ficha</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alto</fullName>
                </value>
                <value>
                    <fullName>Medio</fullName>
                </value>
                <value>
                    <fullName>Bajo</fullName>
                </value>
                <value>
                    <fullName>No se considera Plan de Cuenta</fullName>
                    <default>true</default>
                    <label>No se considera Plan de Cuenta</label>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
                <value>
                    <fullName>En aprobación</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fc_fm_sumaTipoVivienda__c</fullName>
        <description>Suma de los porcentajes de tipo de vivienda para Banca Hipotecaria</description>
        <formula>fc_pr_interesSocial__c  +  fc_pr_media__c  +  fc_pr_residencial__c  +  fc_pr_secondHome__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suma de los % de tipos de vivienda</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fc_pr_media__c</fullName>
        <defaultValue>IF(
   $RecordType.Name = &apos;Hipotecaria&apos; ||
   $RecordType.Name = &apos;Hipotecaria Opp&apos;, 0, null)</defaultValue>
        <label>% Media</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fc_pr_residencial__c</fullName>
        <defaultValue>IF(
   $RecordType.Name = &apos;Hipotecaria&apos; ||
   $RecordType.Name = &apos;Hipotecaria Opp&apos;, 0, null)</defaultValue>
        <label>% Residencial</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
     <fields>
        <fullName>fc_pr_secondHome__c</fullName>
        <defaultValue>IF(
   $RecordType.Name = &apos;Hipotecaria&apos; ||
   $RecordType.Name = &apos;Hipotecaria Opp&apos;, 0, null)</defaultValue>
        <label>% Second home</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fc_pr_interesSocial__c</fullName>
        <defaultValue>IF(
   $RecordType.Name = &apos;Hipotecaria&apos; ||
   $RecordType.Name = &apos;Hipotecaria Opp&apos;, 0, null)</defaultValue>
        <label>% Interés social</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fecha_de_caducidad_c__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha_de_caducidad__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Valoracion_DD_DR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Valoración DD/DR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Valoracion_DG_RED__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Valoración DG RED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Valoracion_DO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Valoración DO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_BPP_Act__c</fullName>
        <formula>Cliente__r.BPyP_tx_ActividadGiro__c</formula>
        <label>Actividad preponderante del cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPP_DesglPreapr__c</fullName>
        <label>Productos Preaprobados</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nomina</fullName>
                </value>
                <value>
                    <fullName>PPI</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>TDC Infinite</fullName>
                </value>
                <value>
                    <fullName>TDC Platinum</fullName>
                </value>
                <value>
                    <fullName>Hipotecario</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_BPP_RentCliente__c</fullName>
        <label>Rentabilidad Cliente (Ingreso Mensual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_BPP_RenTClientePerc__c</fullName>
        <label>Rentabilidad Cliente (Margen %)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MX_BPP_SaldoCredito__c</fullName>
        <description>Saldo en Crédito de BPyP</description>
        <label>Saldo en Crédito</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_BPP_TieneCredPre__c</fullName>
        <label>¿Tiene Creditos Preaprobados?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oficina__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Oficina</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Propietario_name__c</fullName>
        <formula>Owner:User.FirstName  &amp;&quot; &quot;&amp;  Owner:User.LastName</formula>
        <label>Propietario name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suma_nomina__c</fullName>
        <formula>Empleados_en_Electronico__c  +  Empleados_en_Cheque__c  +  Empleados_en_Efectivo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suma de los % de nómina</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Valoracion_DDDR__c</fullName>
        <label>Valoración DD/DR</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Valoracion_DO__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Excelente</fullName>
                </value>
                <value>
                    <fullName>Validado</fullName>
                </value>
                <value>
                    <fullName>Incompleto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
    <fullName>Valoracion_DO__c</fullName>
        <label>Valoración DO</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Estatus_Ficha__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Excelente</fullName>
                </value>
                <value>
                    <fullName>Validado</fullName>
                </value>
                <value>
                    <fullName>Incompleto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valoracion_RED__c</fullName>
        <label>Valoración DG RED</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Valoracion_DDDR__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Excelente</fullName>
                </value>
                <value>
                    <fullName>Validado</fullName>
                </value>
                <value>
                    <fullName>Incompleto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Plan de Cuenta</label>
    <listViews>
        <fullName>BPyP_vl_PlanesAprobados</fullName>
        <columns>NAME</columns>
        <columns>Cliente__c</columns>
        <columns>Estatus_Ficha__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ficha_de_conocimiento__c.BPyP_tre_planDeCuenta</value>
        </filters>
        <filters>
            <field>Estatus_Ficha__c</field>
            <operation>equals</operation>
            <value>Aprobado</value>
        </filters>
        <label>Estatus Aprobado</label>
        <sharedTo>
            <roleAndSubordinates>BPYP_DIRECCI_N_GENERAL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BPyP_vl_PlanesEnAprobacion</fullName>
        <columns>NAME</columns>
        <columns>Cliente__c</columns>
        <columns>Estatus_Ficha__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ficha_de_conocimiento__c.BPyP_tre_planDeCuenta</value>
        </filters>
        <filters>
            <field>Estatus_Ficha__c</field>
            <operation>equals</operation>
            <value>En aprobación</value>
        </filters>
        <label>Estatus En aprobación</label>
        <sharedTo>
            <roleAndSubordinates>BPYP_DIRECCI_N_GENERAL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BPyP_vl_PlanesRechazado</fullName>
        <columns>NAME</columns>
        <columns>Cliente__c</columns>
        <columns>Estatus_Ficha__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ficha_de_conocimiento__c.BPyP_tre_planDeCuenta</value>
        </filters>
        <filters>
            <field>Estatus_Ficha__c</field>
            <operation>equals</operation>
            <value>Rechazado</value>
        </filters>
        <label>Estatus Rechazado</label>
        <sharedTo>
            <roleAndSubordinates>BPYP_DIRECCI_N_GENERAL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BPyP_vl_TodosPlanesCuenta</fullName>
        <columns>NAME</columns>
        <columns>Cliente__c</columns>
        <columns>Estatus_Ficha__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ficha_de_conocimiento__c.BPyP_tre_planDeCuenta</value>
        </filters>
        <label>Patrimonial y Privado</label>
        <sharedTo>
            <roleAndSubordinates>BPYP_DIRECCI_N_GENERAL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FC-{0000000000}</displayFormat>
        <label>Plan de Cuenta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan de Cuenta</pluralLabel>
    <recordTypes>
        <fullName>BPyP_tre_planDeCuenta</fullName>
        <active>true</active>
        <label>BPyP</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>BPyP_rva_ContactoDecisor</fullName>
        <active>true</active>
        <description>Si la respuesta es No en el campo Contactos decisores, debes dar de alta al contacto que es decisor en las inversiones.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName =&quot;BPyP_tre_planDeCuenta&quot;,
 ISPICKVAL(BPyP_ls_CtcDes__c, &quot;NO&quot;),
 BPyP_rb_Contacto_Decisor__c =&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>BPyP_rb_Contacto_Decisor__c</errorDisplayField>
        <errorMessage>Capture un contactos Decisor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BPyP_rva_ContactoOperador</fullName>
        <active>true</active>
        <description>Contactos Operadores</description>
        <errorConditionFormula>AND ( RecordType.DeveloperName =&quot;BPyP_tre_planDeCuenta&quot;,
 ISPICKVAL(BPyP_ls_Contactos_Operadores__c, &quot;Si&quot;),
 BPyP_rb_Contacto_Operador__c=&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>BPyP_rb_Contacto_Operador__c</errorDisplayField>
        <errorMessage>Capture un Contacto Decisor/Ejecutor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BPyP_rva_EmpresaFamiliar</fullName>
        <active>true</active>
        <description>Capturar una empresa en caso de responder Si en la pregunta Tiene Empresa Familiar</description>
        <errorConditionFormula>AND(RecordType.DeveloperName =&quot;BPyP_tre_planDeCuenta&quot;,
ISPICKVAL(BPyP_ls_EmpresaFamiliar__c, &quot;Si&quot;),
    BPyP_rb_Empresa_1__c=&quot;&quot;,
    BPyP_rb_Empresa_2__c=&quot;&quot;,
    BPyP_rb_Empresa_3__c=&quot;&quot;,
    BPyP_rb_Empresa_4__c=&quot;&quot;,
    BPyP_rb_Empresa_5__c=&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>BPyP_ls_EmpresaFamiliar__c</errorDisplayField>
        <errorMessage>Capture una Empresa  para continuar</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BPyP_rva_NOCapturarOtraFuenteIngresos</fullName>
        <active>true</active>
        <description>No permite guardar el registro si capturas información en el campo Otra fuente de ingresos, y no seleccionaste la opción Otro (especificar) en el campo Principal fuente de ingresos</description>
        <errorConditionFormula>AND (RecordType.DeveloperName = &quot;BPyP_tre_planDeCuenta&quot;,
NOT (ISPICKVAL( BPyP_ls_MnIncome__c ,&quot;Otro (especificar)&quot;)),
BPyP_tx_OthIncome__c&lt;&gt;&quot;&quot;)</errorConditionFormula>
        <errorMessage>Debe seleccionar la opción Otro (especificar) en el campo Principal fuente de ingresos</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BPyP_rva_NoEmpresaFamiliar</fullName>
        <active>true</active>
        <description>Valida que si reponde que no en tiene empresa familiar no tenga ninguna empresa Familiar</description>
        <errorConditionFormula>AND(RecordType.DeveloperName =&quot;BPyP_tre_planDeCuenta&quot;,
ISPICKVAL(BPyP_ls_EmpresaFamiliar__c, &quot;NO&quot;),
    OR(BPyP_rb_Empresa_1__c!=&quot;&quot;,
    BPyP_rb_Empresa_2__c!=&quot;&quot;,
    BPyP_rb_Empresa_3__c!=&quot;&quot;,
    BPyP_rb_Empresa_4__c!=&quot;&quot;,
    BPyP_rb_Empresa_5__c!=&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>BPyP_ls_EmpresaFamiliar__c</errorDisplayField>
        <errorMessage>Verifica la selección del campo tiene empresas</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BPyP_rva_OtraFuenteIngresos</fullName>
        <active>true</active>
        <description>Si selecciona la opción Otro en el campo Principal fuente de ingresos, debe capturar inforación en el campo Otra fuente de ingresos</description>
        <errorConditionFormula>AND (RecordType.DeveloperName = &quot;BPyP_tre_planDeCuenta&quot;,
    ISPICKVAL( BPyP_ls_MnIncome__c ,&quot;Otro (especificar)&quot;),
    BPyP_tx_OthIncome__c =&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>BPyP_tx_OthIncome__c</errorDisplayField>
        <errorMessage>Por favor capture Otra fuente de ingresos</errorMessage>
    </validationRules>
<validationRules>
        <fullName>fc_rva_Porcentajes_100_tipo_vivienda</fullName>
        <active>true</active>
        <description>Valida que la suma de los porcentajes del tipo de vivienda sea 100%</description>
        <errorConditionFormula>AND(
    NOT( ISCHANGED( Propietario_name__c ) ),
     fc_fm_sumaTipoVivienda__c   &lt;&gt; 0.0 &amp;&amp; fc_fm_sumaTipoVivienda__c  &lt;&gt; 1.0
)</errorConditionFormula>
        <errorMessage>-Suma de los % del tipo de vivienda debe ser igual 100 %</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MX_BPP_Valida_Plan_Cuenta</fullName>
        <active>true</active>
        <description>Valida que el plan de cuenta para los registros de clientes BPyP solo tengan un registro asociado</description>
        <errorConditionFormula>Cliente__r.MX_BPP_Casilla__c  &amp;&amp;
   (Cliente__r.RecordType.DeveloperName  = &apos;BPyP_tre_Cliente&apos;  || Cliente__r.RecordType.DeveloperName  = &apos;BPyP_tre_noCliente&apos; || Cliente__r.RecordType.DeveloperName  = &apos;MX_BPP_PersonAcc_Client&apos; || Cliente__r.RecordType.DeveloperName  = &apos;MX_BPP_PersonAcc_NoClient&apos;) &amp;&amp;
   ISNEW()</errorConditionFormula>
        <errorMessage>Solo se puede asociar un Plan de Cuenta por Cliente o Prospecto</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Suma_de_los_porcentajes_de_nomina</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT( ISCHANGED( Propietario_name__c ) ),
    Suma_nomina__c  &lt;&gt; 0.0 &amp;&amp; Suma_nomina__c &lt;&gt; 1.0
)</errorConditionFormula>
        <errorMessage>-Suma de los % de nómina debe ser igual 100</errorMessage>
    </validationRules>
</CustomObject>